<resources>
    <string name="app_name">Pop Movies</string>
    <string name="action_settings">Settings</string>
    <string name="most_popular">Most Popular</string>
    <string name="most_rated">Most Rated</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="title_movie_details">Title</string>
    <string name="date_realase">2015–05-12</string>
    <string name="average_vote">a.1/10</string>
    <string name="mark_as_favorite">MARK AS FAVORITE</string>
    <string name="synopsis_txt">Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill, a super-villain who, alongside her inventor husband Herb, hatches a plot to take over the world.</string>
    <string name="content_desc_mov_details">jupiter image</string>
    <string name="network_unavailbe">Network is unavilable!</string>

    <!--Preference -->
    <string name="pref_sort_default">popularity.desc</string>
    <string name="pref_sort_vote_count">vote_count.desc</string>
    <string name="details_trailers_label">Trailers:</string>
    <string name="title_activity_review">Review</string>
    <string name="hello_world">Hello world!</string>
</resources>
