<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="vertical"
        tools:context="com.example.android.popularmovies.MovieDetailsActivityFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textdetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_movie_details"
                android:textSize="30sp"
                android:padding="25dp"
                android:background="@color/green_pop"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="6dp">

            <ImageView
                android:id="@+id/imgitem"
                android:layout_width = "90dp"
                android:layout_height= "150dp"
                android:src="@drawable/jupiter"
                android:layout_weight="1"
                android:contentDescription="@string/content_desc_mov_details"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="3"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">
                <TextView
                    android:id="@+id/date_id"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/date_realase"
                    android:textSize="25sp"
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/avg_id"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/average_vote"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/mark_as_favorite"
                    android:textSize="12sp"
                    android:background="@color/green_pop"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/overview_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/synopsis_txt"
                android:textSize="15sp"
                android:padding="10dp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>